# 3_softeng_zh_2023

./: .containerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Containerfile  README.md  justfile  rust-toolchain.toml
app/: Cargo.toml  Trunk.toml  index.html
app/src/: main.rs
app/src/components/: app.rs  flex_space.rs  home.rs  icon_button.rs  mod.rs
app/src/components/measurement_list/: measurement.rs  mod.rs
app/src/components/title_bar/: delete_all_button.rs  documentation_button.rs  insert_random_button.rs  mod.rs  reload_button.rs  title.rs
app/src/icons/: info_circle.rs  mod.rs  reload.rs  trash.rs
app/src/state/: action.rs  middleware.rs  mod.rs  reducer.rs  store.rs
app/src/store/: action.rs  mod.rs  provider.rs  reducer.rs
controller/: Cargo.toml  README.md  rust-toolchain.toml
controller/src/: byte_handler.rs  flash.rs  main.rs  mqtt.rs  temperature.rs  usb_serial.rs  wifi.rs
controller/src/cmd_handlers/: mod.rs  set_config.rs
design/: redirect.md
dev/: get_current_version.sh  insert_random.sh  release.sh  setup.sh  should_release.sh  try_push_version_tag.sh  zellij.kdl
docs/: Cargo.toml  book.toml  build.rs
docs/diagrams/: 4plus1_development.d2  4plus1_logical.d2  4plus1_process.d2  4plus1_scenario_measurement.d2  4plus1_scenario_user_connects.d2  c4_component_spa.d2  c4_component_web_service.d2  c4_container.d2
docs/src/: 4plus1.md  SUMMARY.md  architecture.md  c4.md  contributing.md  diagrams.md  example_setup.md  lib.rs  overview.md  redux_pattern.md  styles_and_patterns.md
docs/src/ADR/: 001_rust.md  002_axum.md  003_serde.md  004_leptos.md  005_websocket.md  006_mqtt_implementation.md  007_configuration_with_serial_communication.md  008_serial_communication_using_cobs.md  index.md
e2e/: package-lock.json  package.json
e2e/tests/: insert.spec.js  title.spec.js
models/: Cargo.toml
models/src/: id.rs  lib.rs  measurement_list.rs  notification.rs  temperature_measurement.rs
mqtt-protocol/: Cargo.toml
mqtt-protocol/src/: connect.rs  fixed_header.rs  lib.rs  publish.rs  variable_length.rs
serial-comm/: Cargo.toml
serial-comm/src/: cobs.rs  lib.rs
serial-comm/src/protocol/: cmd.rs  error.rs  mod.rs  ok.rs  set_config.rs
server/: Cargo.toml  build.rs
server/src/: config.rs  docs.rs  lib.rs  main.rs  mqtt.rs  router.rs  state.rs
server/src/handlers/: measurements.rs  mod.rs  notifications.rs
server/tests/: integration.rs  server.rs
