[package]
name = "app"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = { version = "0.8.1", default-features = false, features = [
    "net",
    "storage",
] }
leptos = { version = "0.5.0", features = ["csr", "nightly"] }
leptos-use = "0.7.1"
leptos_router = { version = "0.5.0", features = ["csr", "nightly"] }
models = { path = "../models" }
serde = { workspace = true }
serde_json = { workspace = true }
