[package]
name = "models"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
chrono.workspace = true
uuid = { version = "1.1.2", features = ["v4", "js"] }
