[package]
name = "server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

default-run = "server"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6", features = ["macros", "headers"] }
chrono.workspace = true
clap = { version = "4.3.4", features = ["derive", "env"] }
hyper-tls = { version = "0.5.0", features = ["vendored"] }
mime_guess = "2.0.4"
models = { path = "../models" }
rand = "0.8.5"
rust-embed = { version = "6.6.0", features = ["axum"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.26", features = ["full"] }
tower-http = { version = "0.4.0", features = [
    "fs",
    "trace",
    "compression-gzip",
    "compression-br",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
