[package]
name = "server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.6", features = ["macros", "headers", "ws"] }
chrono.workspace = true
clap = { version = "4.3.4", features = ["derive", "env"] }
docs = { path = "../docs" }
mime_guess = "2.0.4"
models = { path = "../models" }
rust-embed.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.26", features = ["full"] }
tower-http = { version = "0.4.0", features = [
    "fs",
    "trace",
    "compression-gzip",
    "compression-br",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
futures = "0.3"
hyper = { version = "0.14.27", features = ["full"] }
tokio-tungstenite = "0.20.1"
tower = "0.4.13"
